--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.2.1",
     "lucide-react": "^0.475.0",
     "openai": "^6.22.0",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.624",
     "react": "^19.2.4",
