--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
     "framework": "vite",
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
+    "crons": [
+        {
+            "path": "/api/process-queue",
+            "schedule": "* * * * *"
+        }
+    ],
     "rewrites": [
         {
             "source": "/((?!api).*)",
