--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "crons": [
         {
             "path": "/api/process-queue",
-            "schedule": "* * * * *"
+            "schedule": "0 3 * * *"
         }
     ],
     "rewrites": [
